--- a/Web/index.html
+++ b/Web/index.html
@@ -2,14 +2,29 @@
 <html>
 <head>
 	<title>Login</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="uikit/dist/css/uikit.min.css">
+	<script src="uikit/dist/js/uikit.min.js"></script>
+	<script src="uikit/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
 	<form>
-		Username :<br>
-		<input type="text" name="user" placeholder="Your username"><br>
-		Password :<br>
-		<input type="password" name="pass" placeholder="Your password"><br>
-		<button type="submit">Submit</button>
+		<div class="uk-margin">
+			<div class="uk-inline">
+				<span class="uk-form-icon" uk-icon="icon: user"></span>
+				<input class="uk-input" type="text" name="user" placeholder="Your username">
+			</div>
+		</div>
+		<div class="uk-margin">
+			<div class="uk-inline">
+				<span class="uk-form-icon" uk-icon="icon: lock"></span>
+				<input class="uk-input" type="password" name="pass" placeholder="Your password">
+			</div>
+		</div>
+		<p uk-margin>
+			<button class="uk-button uk-button-primary">Submit</button>
+		</p>
 	</form>
 </body>
 </html>
