--- a/Web/index.html
+++ b/Web/index.html
@@ -9,7 +9,7 @@
 	<script src="uikit/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
-	<form>
+	<form action="connect.php" method="POST">
 		<div class="uk-margin">
 			<div class="uk-inline">
 				<span class="uk-form-icon" uk-icon="icon: user"></span>
@@ -23,7 +23,7 @@
 			</div>
 		</div>
 		<p uk-margin>
-			<button class="uk-button uk-button-primary">Submit</button>
+			<button class="uk-button uk-button-primary" name="submit">Submit</button>
 		</p>
 	</form>
 </body>
