connected database success!!!

--- a/Web/index.html
+++ b/Web/index.html
@@ -9,7 +9,7 @@
 	<script src="uikit/dist/js/uikit-icons.min.js"></script>
 </head>
 <body>
-	<form action="connect.php" method="POST">
+	<form action="login.php" method="POST">
 		<div class="uk-margin">
 			<div class="uk-inline">
 				<span class="uk-form-icon" uk-icon="icon: user"></span>
@@ -22,9 +22,7 @@
 				<input class="uk-input" type="password" name="pass" placeholder="Your password">
 			</div>
 		</div>
-		<p uk-margin>
-			<button class="uk-button uk-button-primary" name="submit">Submit</button>
-		</p>
+		<input class="uk-button uk-button-primary" type="submit" name="submit" value="Login"></button>
 	</form>
 </body>
 </html>
