--- a/Web/index.html
+++ b/Web/index.html
@@ -7,22 +7,33 @@
 	<link rel="stylesheet" href="uikit/dist/css/uikit.min.css">
 	<script src="uikit/dist/js/uikit.min.js"></script>
 	<script src="uikit/dist/js/uikit-icons.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<form action="login.php" method="POST">
-		<div class="uk-margin">
-			<div class="uk-inline">
-				<span class="uk-form-icon" uk-icon="icon: user"></span>
-				<input class="uk-input" type="text" name="user" placeholder="Your username">
+	<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
+		<div class="uk-grid" data-uk-grid-margin="">
+            <div class="uk-width-medium-1-1 uk-row-first" style="margin-top: 50px">
+            	<div class="uk-vertical-align uk-text-center">
+					<div class="uk-vertical-align-middle uk-width-1-1">
+						<form action="login.php" method="POST">
+							<div class="uk-margin">
+								<div class="uk-inline">
+									<span class="uk-form-icon" uk-icon="icon: user"></span>
+									<input class="uk-input" type="text" name="user" placeholder="Your username">
+								</div>
+							</div>
+							<div class="uk-margin">
+								<div class="uk-inline">
+									<span class="uk-form-icon" uk-icon="icon: lock"></span>
+									<input class="uk-input" type="password" name="pass" placeholder="Your password">
+								</div>
+							</div>
+							<input class="uk-button uk-button-primary" type="submit" name="submit" value="Login"></button>
+						</form>
+					</div>
+				</div>
 			</div>
 		</div>
-		<div class="uk-margin">
-			<div class="uk-inline">
-				<span class="uk-form-icon" uk-icon="icon: lock"></span>
-				<input class="uk-input" type="password" name="pass" placeholder="Your password">
-			</div>
-		</div>
-		<input class="uk-button uk-button-primary" type="submit" name="submit" value="Login"></button>
-	</form>
+	</div>
 </body>
 </html>
