--- a/Web/index.html
+++ b/Web/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
-		<div class="uk-grid" data-uk-grid-margin="">
+		<div class="uk-grid" data-uk-grid-margin>
             <div class="uk-width-medium-1-1 uk-row-first" style="margin-top: 50px">
             	<div class="uk-vertical-align uk-text-center">
 					<div class="uk-vertical-align-middle uk-width-1-1">
@@ -19,7 +19,7 @@
 							<div class="uk-margin">
 								<div class="uk-inline">
 									<span class="uk-form-icon" uk-icon="icon: user"></span>
-									<input class="uk-input" type="text" name="user" placeholder="Your username">
+									<input class="uk-input" type="text" name="user" placeholder="Your username" autofocus="">
 								</div>
 							</div>
 							<div class="uk-margin">
