--- a/Web/index.html
+++ b/Web/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.31/css/uikit.min.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.31/js/uikit.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.31/js/uikit-icons.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="index-main.css">
 	<style>
 	/* Center the loader */
 	#loader {
@@ -65,12 +66,13 @@
 	<div id="loader"></div>
 	<div style="display:none;" id="myDiv" class="animate-bottom">	
 <!-- ************************************************************************************************** -->
-	<div class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
+	<div class="bg"></div>
+	<div class="uk-container uk-container-center">
 		<div class="uk-grid" data-uk-grid-margin>
             <div class="uk-width-medium-1-1 uk-row-first" style="margin-top: 50px">
             	<div class="uk-vertical-align uk-text-center">
 					<div class="uk-vertical-align-middle uk-width-1-1">
-						<div class="uk-background-image@l uk-background-cover uk-height-medium  uk-flex uk-flex-center uk-flex-middle" style="background-image: url(FoodCover.jpg);">
+						<div class="uk-background-image@l uk-background-cover uk-height-medium  uk-flex uk-flex-center uk-flex-middle" style="background-image: url(Picture/foodCover.jpg);box-shadow:0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);">
 						<form action="login.php" method="POST">
 							<div class="uk-margin">
 								<div class="uk-inline">
@@ -92,12 +94,13 @@
 			</div>
 		</div>
 	</div>
+</div>
 <!-- ************************************************************************************************** -->
 	</div>
 	<script>
 		var myVar;
 		function myFunction() {
-		    myVar = setTimeout(showPage, 1800);
+		    myVar = setTimeout(showPage, 1200);
 		}
 		function showPage() {
 		  document.getElementById("loader").style.display = "none";
